portfolio_nextjs/styles/globals.scss
$color-main: rgb(132, 189, 182);
$color-secondary: rgb(65, 158, 147);

html,
body {
    padding: 0;
    width: 100vw;
    height: 100vh;
    margin: 0;
    overflow-x: hidden;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
    color: inherit;
    text-decoration: none;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

.layout {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    .header {
        background-color: $color-secondary;
        padding: 1rem 10rem;
        display: flex;
        justify-content: center;
        align-items: center;
    }
}

.navbar-nav {
    .nav-link {
        font-size: 1.25rem;
    }
}

.content-container {
    // width: 100vw;
    text-align: center;
    background-color: $color-main;
    .content {
        display: flex;
        flex-direction: column;
        gap: 2rem;
    }
}

.content {
    background-color: $color-main;
    // background: rgb(122, 196, 134);
    // background: radial-gradient(circle, rgba(122, 196, 134, 1) 28%, rgba(0, 158, 146, 1) 47%);

    margin: 0 auto;
    padding: 4rem 0;
    text-align: center;
    position: relative;
    min-height: 90vh;

    p {
        padding: 1rem 0;
        width: 20vw;
        margin: 0 auto;
    }
}

.project-list {
    padding: 2rem 0;
    border-radius: 1rem;
    margin: 0 auto;
    margin-top: 1rem;
    width: 80vw;
}

.project {
    padding: 1rem 8vw;

    margin: 0 auto;
    text-align: center;
    align-items: center;
    .accordion-body {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .desc {
        width: 50%;
        margin: 0 auto;
        justify-content: center;
    }
    .accordion-button {
        display: flex;
        gap: 1rem;

        justify-content: space-between;
    }

    h4 {
        text-decoration: underline;
    }
    #gitLink {
        color: gray;
    }
    ul {
        font-style: italic;
    }
}

.image-container {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    margin-left: 1rem;
    .image {
        width: 100%;
    }
}

.tech-stack-container {
    display: grid;
    grid-template-columns: auto auto auto auto;
    justify-content: center;
    grid-gap: 0.5rem 0.5rem;
    margin: 0 auto;
    margin-top: 1rem;
    width: 65vw;
    img {
        width: 10vw;
    }
}

footer {
    display: flex;
    justify-content: center;
    gap: 1.2rem;
    padding: 0.5rem 0.5rem;
    position: relative;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    background-color: $color-secondary;
}

.gradient-text {
    background: #3c5ecf;
    background: -webkit-radial-gradient(
        circle farthest-corner at center center,
        #3c5ecf 0%,
        #cf387e 100%
    );
    background: -moz-radial-gradient(
        circle farthest-corner at center center,
        #3c5ecf 0%,
        #cf387e 100%
    );
    background: radial-gradient(
        circle farthest-corner at center center,
        #3c5ecf 0%,
        #cf387e 100%
    );
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

//////////////////////////////////////////////////////////
/// Mobile
@media screen and (max-width: 768px) {
    .layout {
        .header {
            padding: 1rem 1rem;
            margin: 0;

            #nameHeading {
                font-size: 1rem;
            }
        }
    }

    .navbar-nav {
        .nav-link {
            font-size: 1rem;
        }
    }

    .content {
        p {
            width: 80vw;
        }
    }

    .tech-stack-container {
        width: 50vw;
        img {
            width: 15vw;
        }
    }

    .project {
        .desc {
            width: 100%;
        }
    }
    .image-container {
        display: none;
    }
}

